CHANGES

3.45 - 2014-02-27 - minor maintenance release

- fixed: link to idented_a format description
  RT #85400 https://rt.cpan.org/Public/Bug/Display.html?id=85400
  fixed by Martin McGrath

- fixed: code that gave a warning in 5.19.9

- fixed: RT #86651, xml_pp, quote not escaped in attribute values

- added: docs for tools and safe_print_to_file

- added: support for XPath variables
  thanks to Nathan Glenn for the initial implementation

- updated: Changes to conform to CPAN::Changes + test


3.44 - 2013-05-13 - minor maintenance release

- added: XML::Twig::Elt new method now acccepts literal content, eg
  my $e= XML::Twig::Elt->new( '<div><p>foo</p><p>bar</p></div>');

- added: twig handler triggers now accept the syntax <tag>#<id>
  use *#<id> if you don't want to specify the tag name (#<id> would not
  work since this is the syntax for "private" elements, this makes it
  ugly, but is due to the fact that when I started working on XML::Twig
  CSS wasn't really around)

- fixed: merge had some problems dealing with embedded comments

- improved: more tests

- improved: make Changes conform to the CPAN::Changes spec


3.43 - 2013-02-31 - minor maintenance release

- improved: docs for parse, see RT #78877
  https://rt.cpan.org/Ticket/Display.html?id=78877

- fixed: xml_pp -i now preserves the permissions of the
  original file, see RT #81165
  https://rt.cpan.org/Ticket/Display.html?id=81165 
  reported by Alberto Simoes

- fixed: RT #80503 Newlines in attribute values
  https://rt.cpan.org/Ticket/Display.html?id=80503
  reported (and explained) by Ambrus Zsban: \r, \n
  and \n explicitely set in attribute values should
  be escaped (with &#x<nb>;) when output 


3.42 - 2012-11-06 - minor maintenance release

- fixed: bug, elements created with XML::Twig::Elt->parse were 
  garbage collected too early, 
  see http://stackoverflow.com/questions/13263193/xmltwig-changes-erased

- added: some tests


3.41 - 2012-08-08 - minor maintenance release
